# Copyright (c) 2017-2018 the Volcano Authors. Licensed under GPLv3.

import("//src/gn/vendor/glslangValidator.gni")
import("//src/gn/vendor/androidExecutable.gni")

glslangVulkanToHeader("shaders") {
  sources = [
    "04android.vert",
    "04android.frag",
  ]
}

androidExecutable("04android") {
  sources = [ "04android.cpp" ]

  deps = [
    ":shaders",
    "../src:base_application",
  ]
}
