# Copyright (c) 2017-2018 the Volcano Authors. Licensed under GPLv3.

import("//src/gn/vendor/glslangValidator.gni")
import("//src/gn/vendor/androidExecutable.gni")

glslangVulkanToHeader("shaders") {
  sources = [
    "05indexbuffer.vert",
    "05indexbuffer.frag",
  ]
}

androidExecutable("05indexbuffer") {
  sources = [ "05indexbuffer.cpp" ]

  deps = [
    ":shaders",
    "../src:base_application",
    "//src/gn/vendor/glm",
  ]
}
