# Copyright (c) 2017-2018 the Volcano Authors. Licensed under GPLv3.

import("//src/gn/vendor/glslangValidator.gni")
import("//src/gn/vendor/androidExecutable.gni")

glslangVulkanToHeader("shaders") {
  sources = [
    "21scene.vert",
    "21scene.frag",
  ]
}

androidExecutable("21physics") {
  sources = [ "21physics.cpp" ]

  deps = [
    ":shaders",
    "../src/asset",
    "../src/uniformglue",
    "../src:assimpglue",
    "//vendor/volcano",
    "//src/gn/vendor/gli",
    "//src/gn/vendor/glm",
  ]
}
